--- a/backend/package.json
+++ b/backend/package.json
@@ -3,17 +3,19 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node --watch ./src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "express": "^4.20.0"
   },
   "devDependencies": {
     "eslint": "^9.10.0",
     "prettier": "^3.3.3"
-  }
+  },
+  "type": "module"
 }
